<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera Sputnik</string>
    <string name="hello_world_es">Hello world!</string>
    <string name="action_settings_es">Configuración</string>
    <string name="Hola_Mundo_es">Hola Mundo!</string>
    <string name="scanDevicesButtonText_es">Scan Devices</string>
    <string name="conectado_str_es">CONECTADO</string>
    <string name="desconectado_str_es">DESCONECTADO</string>
    <string name="device_list_es">Lista de dispositivos</string>
    <string name="Device1">Device 1</string>
    <string name="devices_list_es">Dispositivos detectados</string>
    <string name="connecting">Conectando…</string>
    <string name="connecting_device">Conectando con el dispositivo</string>
    <string name="cancel_device_list">Cancelar</string>
    <string name="scanning">Buscando…</string>
    <string name="scanning_devices">Buscando dispositivos</string>
    <string name="downloadText">Descarga</string>
    <string name="uploadText">Subida</string>
    <string name="gallery_button">Galería de fotos</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gallery_text">Fotos recibidas</string>
    <string name="enlarge_image_gallery">Click para hacer más grande</string>
    <string name="large_image_description">Imagen grande</string>
    <string name="start_stop_track">Nuevo Recorrido</string>
    <string name="stop_track">Terminar Recorrido</string>
    <string name="image_text_description">imageText</string>
    <string name="action_show_dates">Calendario</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar_title" />
    <string name="GalleryActivity_no_track_saved">Still no track has been saved</string>
    <string name="GalleryActivity_no_track_found_in_day">No track found in selected day</string>
    <string name="GalleryActivity_no_image_in_selected_track">No image found in selected track</string>
    <string name="GalleryActivity_select_one_track">Select one track:</string>
    <string name="GalleryActivity_cancel">Cancel</string>
    <string name="MainActivity_current_track_already_open">Could not create new track. There is one already active.</string>

</resources>
