<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/gallery_text"
        android:gravity="center"
        android:textStyle="bold" />

    <com.ayoza.camera_sputnik.camerasputnik.gallery.entities.PagerContainer
        android:id="@+id/pager_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCC">
        <android.support.v4.view.ViewPager
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />
    </com.ayoza.camera_sputnik.camerasputnik.gallery.entities.PagerContainer>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textStyle="italic"
        android:text="@string/enlarge_image_gallery" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/large_image_description" />

</LinearLayout>