<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devices_list_es"
        android:id="@+id/scanDevicesButtonId"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:onClick="scanDevices"
        android:enabled="false"
        android:elevation="@dimen/abc_action_button_min_height_material"
        android:elegantTextHeight="true"
        android:longClickable="false"
        android:background="@color/deactivated"
        android:textColor="@color/list_devices_text_deactivated" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/desconectado_str_es"
        android:id="@+id/bluetoothStatus"
        android:background="@drawable/rounded_corner_red"
        android:textAlignment="center"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:singleLine="true"
        android:textColor="#ff2326ff"
        android:focusableInTouchMode="false"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/scanDevicesButtonId"
        android:layout_below="@+id/bluetoothStatus"
        android:layout_alignParentBottom="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/downloadText"
                android:id="@+id/downloadText"
                android:gravity="center_vertical"
                android:textColor="#ff499235" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/downloadBar"
                android:progressTint="#ff45ff15"
                android:progressBackgroundTint="#ff2bfffa" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/uploadText"
                android:id="@+id/uploadText"
                android:gravity="center_vertical"
                android:textColor="#ff920c0f" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/uploadBar"
                android:indeterminate="false"
                android:longClickable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_button"
                android:id="@+id/button"
                android:elevation="@dimen/abc_action_button_min_height_material"
                android:enabled="true"
                android:elegantTextHeight="true"
                android:clickable="true"
                android:onClick="showGallery"
                android:nestedScrollingEnabled="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton"
                android:checked="false"
                android:textOn="@string/stop_track"
                android:textOff="@string/start_stop_track"
                android:onClick="toggleCreateFinishTrack" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
